# smsgateway

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/accounts/management/commands/: initadmin.py
backend/api/: exceptions.py  urls.py
backend/core/: asgi.py  consumers.py  drf.py  forms.py  middleware.py  routing.py  urls.py  wsgi.py  yasg.py
backend/core/settings/: default.py  development.py  production.py
backend/sms/: api.py  forms.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/sms/migrations/: 0001_initial.py  0002_remove_message_phone_number.py  0003_alter_message_is_sent_alter_message_send_to_and_more.py
backend/sms/templates/sms/: message-add.html  messages-list.html
backend/sms/templatetags/: phonetags.py
backend/static/css/: main.css
backend/templates/: base.html  pagination.html
backend/web/: forms.py  urls.py  views.py
backend/web/templates/web/: index.html  login.html  signup.html
gateway/core/: asgi.py  settings.py  wsgi.py
scripts/docker/dev/: Dockerfile  entrypoint.sh
scripts/docker/prod/: Dockerfile  entrypoint.sh  vercel.sh
